--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "easymde": "^2.18.0",
+    "i18next": "^23.5.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
+    "react-i18next": "^13.2.2",
     "react-markdown": "^8.0.7",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
